--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
     "@fullcalendar/daygrid": "^4.1.0",
     "@fullcalendar/timegrid": "^4.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.2",
+    "@sendgrid/mail": "^6.4.0",
     "@sweetalert2/ngx-sweetalert2": "^5.0.3",
     "@types/jquery": "^3.3.29",
     "@types/stripe": "^6.25.13",
+    "aws-sdk": "^2.451.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
+    "compression": "^1.7.4",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "fullcalendar": "^3.10.0",
@@ -51,8 +54,11 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
     "mongoose": "^5.5.5",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "ng2-nouislider": "^1.7.13",
     "nouislider": "^13.1.5",
+    "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.5.1",
     "stripe": "^6.31.1",
