--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fullcalendar/angular": "^4.1.0",
     "@fullcalendar/core": "^4.1.0",
     "@fullcalendar/daygrid": "^4.1.0",
+    "@fullcalendar/interaction": "^4.1.0",
     "@fullcalendar/timegrid": "^4.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.2",
     "@sendgrid/mail": "^6.4.0",
