--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "mongoose": "^5.5.5",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
+    "ng2-charts": "^2.2.3",
     "ng2-nouislider": "^1.7.13",
     "nouislider": "^13.1.5",
     "perfect-scrollbar": "^1.4.0",
