--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@sweetalert2/ngx-sweetalert2": "^5.0.3",
     "@types/jquery": "^3.3.29",
     "@types/stripe": "^6.26.7",
+    "angular2-multiselect-dropdown": "^4.2.7",
     "angularx-social-login": "^1.2.7",
     "aws-sdk": "^2.451.0",
     "bcrypt": "^3.0.6",
@@ -55,7 +56,7 @@
     "jw-bootstrap-switch-ng2": "^2.0.5",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
-    "mongoose": "^5.5.5",
+    "mongoose": "^5.6.7",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
     "ng2-charts": "^2.2.3",
