--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ng2-charts": "^2.2.3",
     "ng2-nouislider": "^1.8.2",
     "ngx-bar-rating": "^1.1.0",
+    "ngx-image-cropper": "^1.5.1",
     "ngx-pipes": "^2.5.6",
     "nouislider": "^13.1.5",
     "perfect-scrollbar": "^1.4.0",
